audit: fix chapter numbering, bibliography, subject index, code accuracy
- Fix 10_references_deep_dives.md heading: Chapter 3.9 -> 3.10
- Fix bibliography module labels: Module 4/5 -> Module 5/6
- Fix subject index chapter refs (Ch 4.x -> Ch 5.x for UI/arch entries)
- Fix TDD subject index cross-ref: Ch 5.1 -> Ch 6.1 (in both files)
- Add reactive bibliography entries (R20-R26) to Module 3 refs and global bibliography
- Add reactive subject index entries (Project Reactor, Backpressure, Reactive Streams, etc.)
- Fix FX pipeline diagram typo: 'Async Asynchronous' -> 'Asynchronous'
- Add Java 21 compatibility note for -XX:-UseBiasedLocking (removed JEP 374)
- Fix RxPY API: rx.from_list -> rx.of (Ch 5.6)
- Fix FRP verbatim citation: ICFP -> Haskell Workshop; title -> 'Functional Reactive Animation'
- Recompile full_book_compiled.md and .html