@@ -5198,7 +5198,7 @@ The reactive paradigm, and Project Reactor specifically, is **not** a universal 
 
 <div class="page-break"></div>
 
-# Chapter 3.9: Citation & Reference Deep-Dives — Module 3
+# Chapter 3.10: Citation & Reference Deep-Dives — Module 3
 
 This chapter provides standalone research profiles, mathematical formalisms, hardware memory fence mechanics, and lock-free data structure implementations for all major citations across Module 3.
 
@@ -5308,19 +5308,37 @@ Hardware memory reordering forces low-latency lock-free data structures (like th
 [S9] C. Hewitt, P. Bishop, and R. Steiger, "A Universal Modular ACTOR Formalism for Artificial Intelligence," IJCAI'73, 1973.
 [S10] M. Barker, "Bad Concurrency: Flow Control in Aeron & I Heard a Rumour," bad-concurrency.blogspot.com, 2020.
 
+**Chapter 3.9 — Reactive Paradigm Citations**
+[R20] J. Bonér, D. Farley, R. Kuhn, and M. Thompson, "The Reactive Manifesto," v2.0, 2014. Available: https://www.reactivemanifesto.org/
+[R21] E. Meijer, "Subject/Observer is Dual to Iterator," Microsoft Research, 2010. Available: https://csl.cornell.edu/~jnfoster/cs6113/papers/meijer.pdf
+[R22] Reactive Streams Initiative, "Reactive Streams Specification for the JVM," 2014. Available: https://www.reactive-streams.org/
+[R23] VMware/Broadcom, "Project Reactor — reactor-core," GitHub. Available: https://github.com/reactor/reactor-core
+[R24] OpenJDK, "JEP 266: More Concurrency Updates — java.util.concurrent.Flow," Java 9, 2017.
+[R25] OpenJDK, "JEP 444: Virtual Threads (GA)," Java 21, 2023. Available: https://openjdk.org/jeps/444
+[R26] Ben Hale et al., "R2DBC — Reactive Relational Database Connectivity Specification," r2dbc.io, 2018. Available: https://r2dbc.io/
+
 **Subject Index Cross-References:**
 - Actor Model ......... Ch 3.1, Ch 3.4
+- Backpressure ........ Ch 3.9
 - Cache Line Padding .. Ch 2.4, Ch 3.2, Ch 3.4
 - CAS (Compare-And-Swap) ........ Ch 3.2, Ch 3.4, Ch 2.4
+- CQRS ................ Ch 3.7
+- CSP ................. Ch 3.8
 - Disruptor ........... Ch 3.2, Ch 3.4
-- Event Sourcing ...... Ch 3.2
+- Event Sourcing ...... Ch 3.2, Ch 3.7
 - False Sharing ....... Ch 2.4, Ch 3.2, Ch 3.4
-- LMAX Disruptor ...... Ch 3.2, Ch 3.4
-- Mechanical Sympathy . Ch 3.2, Ch 3.4
+- Flux<T> / Mono<T> .. Ch 3.9
+- LMAX Disruptor ...... Ch 3.2, Ch 3.4, Ch 3.5
+- Mechanical Sympathy . Ch 3.2, Ch 3.4, Ch 3.6
 - Memory Barriers ..... Ch 2.3, Ch 2.4, Ch 3.4
-- Ring Buffer ......... Ch 3.2, Ch 3.4
+- Project Reactor ..... Ch 3.9
+- Reactive Manifesto .. Ch 3.9
+- Reactive Streams .... Ch 3.9
+- Ring Buffer ......... Ch 3.2, Ch 3.4, Ch 3.5
 - Single-Writer Principle ......... Ch 3.2, Ch 3.4
-- TDD ................. Ch 5.1, Ch 3.3
+- Spring WebFlux ...... Ch 3.9
+- TDD ................. Ch 6.1, Ch 3.3
+- Virtual Threads ...... Ch 3.9
 - Volatile ............ Ch 2.3, Ch 2.4, Ch 3.4
 
 <div class="page-break"></div>
@@ -5361,7 +5379,7 @@ Traditional multi-tiered enterprise web applications—relying on database locks
                                       ▼
 ┌───────────────────────────────────────────────────────────────────────────┐
 │                      OUTBOUND BROADCAST & LOGGING                         │
-│   Async Asynchronous Journaler + Network UDP Multicast Market Data Engine │
+│   Asynchronous Journaler + Network UDP Multicast Market Data Engine │
 └───────────────────────────────────────────────────────────────────────────┘
 ```
 
@@ -5956,6 +5974,7 @@ java -XX:+UnlockExperimentalVMOptions \
      -XX:GuaranteedSafepointInterval=0 \
      -XX:-UseBiasedLocking \
      -jar hft-pricing-engine.jar
+# Note: -XX:-UseBiasedLocking was removed in Java 21 (JEP 374). Omit this flag on Java 21+.
 ```
 
 ##### Flag Analysis:
@@ -7008,7 +7027,8 @@ import rx
 from rx import operators as ops
 
 # Python - Processing a stream of events reactively
-events = rx.from_list([1, 2, 3, 4, 5])
+# Note: rx.of(*items) is the correct RxPY 4.x API (rx.from_list was removed)
+events = rx.of(1, 2, 3, 4, 5)
 
 events.pipe(
     ops.filter(lambda x: x % 2 == 0),
@@ -7021,7 +7041,7 @@ events.pipe(
 ## SECTION 2 — VERBATIM TEXT
 
 > **VERBATIM SOURCE**  
-> Functional Reactive Programming, Conal Elliott and Paul Hudak, ICFP, 1997  
+> *Functional Reactive Animation*, Conal Elliott and Paul Hudak, Haskell Workshop (co-located with ICFP), 1997  
 > *This text is represented here as a placeholder for educational study.*
 
 (In a full realization of this book, the verbatim text of seminal papers or articles on FRP would be inserted here, allowing readers to study the formal definitions of behaviors and events.)
@@ -8854,8 +8874,15 @@ The SOLID principles guide the target structure of refactoring efforts:
 [17] J. Byatt, "Why I Don't Do Work in Constructors," LMAX Blog, 2024.
 [18] J. Byatt, "Coverage Can Only Show You What to Delete," LMAX Blog, 2023.
 [19] LMAX Blog, "The Impossible NullPointerException," 2022. Available: https://www.lmax.com/blog/staff-blogs/2022/06/15/the-impossible-nullpointerexception/
+[R20] J. Bonér, D. Farley, R. Kuhn, and M. Thompson, "The Reactive Manifesto," v2.0, 2014. Available: https://www.reactivemanifesto.org/
+[R21] E. Meijer, "Subject/Observer is Dual to Iterator," Microsoft Research, 2010. Available: https://csl.cornell.edu/~jnfoster/cs6113/papers/meijer.pdf
+[R22] Reactive Streams Initiative, "Reactive Streams Specification for the JVM," 2014. Available: https://www.reactive-streams.org/
+[R23] VMware/Broadcom, "Project Reactor — reactor-core," GitHub. Available: https://github.com/reactor/reactor-core
+[R24] OpenJDK, "JEP 266: More Concurrency Updates — java.util.concurrent.Flow," Java 9, 2017.
+[R25] OpenJDK, "JEP 444: Virtual Threads (GA)," Java 21, 2023. Available: https://openjdk.org/jeps/444
+[R26] Ben Hale et al., "R2DBC — Reactive Relational Database Connectivity Specification," r2dbc.io, 2018. Available: https://r2dbc.io/
 
-### Module 4: Software UI Architecture
+### Module 5: Software UI Architecture
 [20] M. Fowler, "GUI Architectures," MartinFowler.com, 2006. Available: https://martinfowler.com/eaaDev/uiArchs.html
 [21] M. Fowler, "Presentation Domain Separation," MartinFowler.com, 2001/06. Available: https://martinfowler.com/eaaDev/SeparatedPresentation.html
 [22] M. Fowler, "Separated Presentation," MartinFowler.com, 2006. Available: https://martinfowler.com/eaaDev/SeparatedPresentation.html
@@ -8865,7 +8892,7 @@ The SOLID principles guide the target structure of refactoring efforts:
 [26] M. Roberts and M. Fowler, "Serverless Architectures," MartinFowler.com, 2018. Available: https://martinfowler.com/articles/serverless.html
 [27] P. Hodgson and M. Fowler, "Feature Toggles," MartinFowler.com, 2017. Available: https://martinfowler.com/articles/feature-toggles.html
 
-### Module 5: Code Evolution Refactoring
+### Module 6: Code Evolution Refactoring
 [28] M. Fowler, "An Example of Preparatory Refactoring," MartinFowler.com, 2014. Available: https://martinfowler.com/articles/preparatory-refactoring-example.html
 [29] M. Fowler, "Refactoring Code to Load a Document," MartinFowler.com, 2016.
 [30] M. Fowler, "Refactoring: This Class is Too Large," MartinFowler.com, 2015.
@@ -8879,35 +8906,44 @@ The SOLID principles guide the target structure of refactoring efforts:
 ## Part B: Subject Index
 - Actor Model ......... Ch 3.1, Ch 3.4
 - Amdahl's Law ........ Ch 2.1, Ch 2.4
+- Backpressure ........ Ch 3.9
 - Cache Line Padding .. Ch 2.4, Ch 3.2, Ch 3.4
 - CAS (Compare-And-Swap) ........ Ch 3.2, Ch 3.4, Ch 2.4
-- Collection Pipelines .......... Ch 5.2, Ch 5.2b
+- Collection Pipelines .......... Ch 6.5
+- CQRS ................ Ch 3.7
+- CSP ................. Ch 3.8
 - Dark Silicon ........ Ch 2.1, Ch 2.2
 - Dependency Inversion .......... Ch 5.2, Ch 5.3
 - Disruptor ........... Ch 3.2, Ch 3.4
 - Double-Checked Locking ........ Ch 2.3, Ch 2.4
-- Event Sourcing ...... Ch 3.2
+- Event Sourcing ...... Ch 3.2, Ch 3.7
 - False Sharing ....... Ch 2.4, Ch 3.2, Ch 3.4
-- Feature Toggles ..... Ch 4.3
-- Gateway Pattern ..... Ch 5.2d, Ch 5.3
+- Feature Toggles ..... Ch 5.3
+- Flux<T> / Mono<T> .. Ch 3.9
+- Gateway Pattern ..... Ch 6.2d, Ch 6.3
 - Happens-Before ...... Ch 2.3, Ch 2.4
 - Java Memory Model ... Ch 2.3, Ch 2.4
 - LMAX Disruptor ...... Ch 3.2, Ch 3.4
 - Mechanical Sympathy . Ch 3.2, Ch 3.4
 - Memory Barriers ..... Ch 2.3, Ch 2.4, Ch 3.4
-- Micro Frontends ..... Ch 4.2
+- Micro Frontends ..... Ch 5.2
 - Moore's Law ......... Ch 2.1, Ch 2.2
-- MVC ................. Ch 4.1, Ch 4.4
-- Notification Pattern .......... Ch 5.1, Ch 5.2
+- MVC ................. Ch 5.1, Ch 5.4
+- Notification Pattern .......... Ch 6.1, Ch 6.2
 - Null References (Billion Dollar Mistake) ..... Ch 1.5
-- Presentation Domain Separation ........ Ch 4.1, Ch 4.4, Ch 4.5
-- Preparatory Refactoring ......... Ch 5.1
-- Refactoring ......... Ch 5.1, Ch 5.1b, Ch 5.2, Ch 5.2b, Ch 5.2c, Ch 5.2d
+- Presentation Domain Separation ........ Ch 5.1, Ch 5.4, Ch 5.5
+- Preparatory Refactoring ......... Ch 6.2
+- Project Reactor ..... Ch 3.9
+- Reactive Manifesto .. Ch 3.9
+- Reactive Streams .... Ch 3.9
+- Refactoring ......... Ch 6.2, Ch 6.3, Ch 6.4, Ch 6.5, Ch 6.6, Ch 6.7
 - Ring Buffer ......... Ch 3.2, Ch 3.4
-- Serverless .......... Ch 4.3
+- Serverless .......... Ch 5.3
 - Single-Writer Principle ......... Ch 3.2, Ch 3.4
-- Software Design ..... Ch 1.1, Ch 1.1b
-- TDD ................. Ch 5.1, Ch 3.3
+- Software Design ..... Ch 1.1, Ch 1.2
+- Spring WebFlux ...... Ch 3.9
+- TDD ................. Ch 6.1, Ch 3.3
+- Virtual Threads ...... Ch 3.9
 - Volatile ............ Ch 2.3, Ch 2.4, Ch 3.4
 
 ## Part C: Author Index
@@ -8956,3 +8992,8 @@ The SOLID principles guide the target structure of refactoring efforts:
 - Martin Fowler (Adaptive Model): https://martinfowler.com/articles/refactoring-adaptive-model.html
 - Martin Fowler (External Service): https://martinfowler.com/articles/refactoring-external-service.html
 - Martin Fowler (PD Data Layering): https://martinfowler.com/bliki/PresentationDomainDataLayering.html
+- Reactive Manifesto: https://www.reactivemanifesto.org/
+- Reactive Streams Specification: https://www.reactive-streams.org/
+- Project Reactor: https://github.com/reactor/reactor-core
+- JEP 444 (Virtual Threads): https://openjdk.org/jeps/444
+- R2DBC Specification: https://r2dbc.io/
